improved slightly 3 equal columns

--- a/Part2.18/country-data-app/src/App.css
+++ b/Part2.18/country-data-app/src/App.css
@@ -1,3 +1,9 @@
+
+#header {
+  text-align: center;
+}
+
+
 /* Create three equal columns that float next to each other */
 .column {
   float: left;
