style body and all divs

--- a/Part2.18/country-data-app/src/App.css
+++ b/Part2.18/country-data-app/src/App.css
@@ -1,20 +1,73 @@
-
-#header {
-  text-align: center;
+body {
+  background-color: #f4eab1
 }
 
+.header {
+  font-family: monospace
+}
+
+ #header-title {
+  text-align: center
+}
 
 /* Create three equal columns that float next to each other */
 .column {
-  float: left;
-  width: 33.33%;
+  width: 75%;
+  border: 1px solid;
+  border-radius: 5px;
+  background-color: #155263;
+  margin: 5px 10px;
+  padding: 5px 10px;
+  color: rgb(231, 226, 219);
+  font-size: 20px;
+  font-family: monospace
 }
 
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+.flag {
+  width: auto;
+  height: auto;
+  
+}
+
+.form {
+  width: 25%;
+  height: auto;
+  border : 1px solid;
+  border-radius: 5px
+}
+
+.button {
+  background-color: #fff;
+  border: 1px solid #d5d9d9;
+  border-radius: 8px;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  box-sizing: border-box;
+  color: #0f1111;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Amazon Ember",sans-serif;
+  font-size: 13px;
+  line-height: 20px;
+  padding: 0 10px 0 11px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  width: 100px;
+  font-family: monospace;
+  margin: 5px
+}
+.button:hover {
+  background-color: #f7fafa;
+}
+
+.button:focus {
+  border-color: #008296;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  outline: 0;
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
@@ -23,3 +76,43 @@
     width: 100%;
   }
 }
+
+/*
+<!-- HTML !-->
+<button class="button-13" role="button">Button 13</button>
+
+/* CSS */
+/*
+.button-13 {
+  background-color: #fff;
+  border: 1px solid #d5d9d9;
+  border-radius: 8px;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  box-sizing: border-box;
+  color: #0f1111;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Amazon Ember",sans-serif;
+  font-size: 13px;
+  line-height: 29px;
+  padding: 0 10px 0 11px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  width: 100px;
+}
+
+.button:hover {
+  background-color: #f7fafa;
+}
+
+.button:focus {
+  border-color: #008296;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  outline: 0;
+}
+  */
